--- a/package.json
+++ b/package.json
@@ -7,13 +7,29 @@
     "start": "expo start",
     "android": "expo start --android",
     "ios": "expo start --ios",
-    "web": "expo start --web"
+    "web": "expo start --web",
+    "test": "jest"
   },
   "dependencies": {
+    "@react-navigation/native": "^7.0.19",
+    "@react-navigation/stack": "^7.2.3",
+    "@reduxjs/toolkit": "^2.6.1",
+    "@testing-library/jest-native": "^5.4.3",
+    "@testing-library/react-native": "^13.2.0",
+    "axios": "^1.8.4",
     "expo": "~52.0.41",
     "expo-status-bar": "~2.0.1",
+    "jest": "^29.7.0",
+    "native-base": "^3.4.28",
     "react": "18.3.1",
-    "react-native": "0.76.7"
+    "react-dom": "^19.0.0",
+    "react-native": "0.76.7",
+    "react-native-gesture-handler": "^2.24.0",
+    "react-native-safe-area-context": "^5.3.0",
+    "react-native-screens": "^4.10.0",
+    "react-native-svg": "^15.11.2",
+    "react-redux": "^9.2.0",
+    "redux": "^5.0.1"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
