--- a/package.json
+++ b/package.json
@@ -8,34 +8,52 @@
     "android": "expo start --android",
     "ios": "expo start --ios",
     "web": "expo start --web",
-    "test": "jest"
+    "test": "jest",
+    "lint": "eslint . --ext .js,.jsx,.ts,.tsx",
+    "lint:fix": "eslint . --ext .js,.jsx,.ts,.tsx --fix"
   },
   "dependencies": {
     "@react-navigation/native": "^7.0.19",
     "@react-navigation/stack": "^7.2.3",
     "@reduxjs/toolkit": "^2.6.1",
-    "@testing-library/jest-native": "^5.4.3",
-    "@testing-library/react-native": "^13.2.0",
     "axios": "^1.8.4",
-    "expo": "~52.0.41",
-    "expo-status-bar": "~2.0.1",
-    "jest": "^29.7.0",
-    "native-base": "^3.4.28",
-    "react": "18.3.1",
-    "react-dom": "^19.0.0",
-    "react-native": "0.76.7",
-    "react-native-gesture-handler": "^2.24.0",
-    "react-native-safe-area-context": "^5.3.0",
-    "react-native-screens": "^4.10.0",
-    "react-native-svg": "^15.11.2",
+    "expo": "53.0.22",
+    "expo-status-bar": "~2.2.3",
+    "metro": "0.82.0",
+    "metro-config": "0.82.0",
+    "metro-resolver": "0.82.0",
+    "react": "19.0.0",
+    "react-dom": "19.0.0",
+    "react-native": "0.79.5",
+    "react-native-gesture-handler": "~2.24.0",
+    "react-native-linear-gradient": "^2.8.3",
+    "react-native-safe-area-context": "5.4.0",
+    "react-native-screens": "~4.11.1",
+    "react-native-svg": "15.11.2",
     "react-redux": "^9.2.0",
-    "redux": "^5.0.1"
+    "redux": "^5.0.1",
+    "expo-linear-gradient": "~14.1.5"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
-    "@types/react": "~18.3.12",
+    "@react-native-community/eslint-config": "^3.2.0",
+    "@testing-library/react-native": "^12.5.2",
+    "@types/react": "~19.0.10",
+    "@typescript-eslint/eslint-plugin": "^8.43.0",
+    "@typescript-eslint/parser": "^8.43.0",
+    "eslint": "^8.57.1",
+    "eslint-config-prettier": "^10.1.8",
+    "eslint-plugin-import": "^2.32.0",
+    "eslint-plugin-jest": "^29.0.1",
+    "eslint-plugin-prettier": "^5.5.4",
+    "eslint-plugin-react": "^7.37.5",
+    "eslint-plugin-react-hooks": "^5.2.0",
+    "eslint-plugin-react-native": "^5.0.0",
+    "jest": "^30.1.3",
+    "prettier": "^3.6.2",
     "react-native-svg-transformer": "^1.5.0",
-    "typescript": "^5.3.3"
+    "react-test-renderer": "^19.0.0",
+    "typescript": "~5.8.3"
   },
   "private": true
 }
