--- a/package.json
+++ b/package.json
@@ -13,11 +13,13 @@
     "lint:fix": "eslint . --ext .js,.jsx,.ts,.tsx --fix"
   },
   "dependencies": {
+    "@react-navigation/material-top-tabs": "^7.3.7",
     "@react-navigation/native": "^7.0.19",
     "@react-navigation/stack": "^7.2.3",
     "@reduxjs/toolkit": "^2.6.1",
     "axios": "^1.8.4",
     "expo": "53.0.22",
+    "expo-linear-gradient": "~14.1.5",
     "expo-status-bar": "~2.2.3",
     "metro": "0.82.0",
     "metro-config": "0.82.0",
@@ -27,12 +29,13 @@
     "react-native": "0.79.5",
     "react-native-gesture-handler": "~2.24.0",
     "react-native-linear-gradient": "^2.8.3",
+    "react-native-pager-view": "6.7.1",
     "react-native-safe-area-context": "5.4.0",
     "react-native-screens": "~4.11.1",
     "react-native-svg": "15.11.2",
+    "react-native-tab-view": "^4.1.3",
     "react-redux": "^9.2.0",
-    "redux": "^5.0.1",
-    "expo-linear-gradient": "~14.1.5"
+    "redux": "^5.0.1"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
@@ -49,7 +52,7 @@
     "eslint-plugin-react": "^7.37.5",
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-native": "^5.0.0",
-    "jest": "^30.1.3",
+    "jest": "^29.7.0",
     "prettier": "^3.6.2",
     "react-native-svg-transformer": "^1.5.0",
     "react-test-renderer": "^19.0.0",
